1999-10-11  Stefan Monnier  <monnier@cs.yale.edu>

	* diff-mode.el (vc-backend-diff): get rid of the autoloaded advice.

1999-10-09  Stefan Monnier  <monnier@cs.yale.edu>

	* Makefile (setwins): abstract out the command to find subdirectories
	and fix it to also ignore subdirectories of CVS (f.ex. CVS/Base).
	(custom-deps, finder-data, autoloads, update-subdirs, updates)
	(autoloads-with-other-emacs): use it.

	* diff-mode.el: new file.  A mode for viewing/editing context diffs.

1999-10-09  Gerd Moellmann  <gerd@gnu.org>

	* Makefile (bootstrap-compile): New target.  Compile Lisp
	files with ../src/temacs.

1999-10-08  Simon Marshall  <simon@gnu.org>

	* emacs-lisp/regexp-opt.el (regexp-opt-try-suffix): New function.
	(regexp-opt-group): Use it to get common suffixes in STRINGS.
	If STRINGS is nil, return "" rather than nil.
	
1999-10-08  Gerd Moellmann  <gerd@gnu.org>

	* Makefile (compile): Compile files one by one.  Set load-path to
	current directory and subdirectories when compiling.
	
1999-10-08  Gerd Moellmann  <gerd@gnu.org>

	* Makefile (EMACSOPT, DONTCOMPILE, EL): New.
	(emacs): Use it everywhere instead of EMACS.
	(compile): New target.  Compile all Lisp files from scratch.
	(recompile): New target.  Recompile lisp directory.
	(autoloads-with-other-emacs): New target.  Build loaddefs.el with
	an Emacs executable not built in the current directory tree.

1999-10-07  Peter Breton  <pbreton@ne.mediaone.net>

	* filecache.el (file-cache-completion-ignore-case): New variable,
	defaulting to the value of completion-ignore-case.
	(file-cache-minibuffer-complete): Use it.
	(file-cache-files-matching, file-cache-files-matching-internal):
	New functions.

1999-10-07  Emmanuel Briot  <briot@gnat.com>

	* ada-xref.el: New file

	* ada-prj.el: New file

	* ada-stmt.el (ada-stmt-add-to-ada-menu): New function

  	* ada-stmt.el (ada-subprogram-body): Correctly find the name of the
	subprogram being created.
